--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -1,20 +1,51 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-VM_BOX = "ubuntu/bionic64"
+#
+# Plugin required:
+# vagrant plugin install vagrant-env
+#
+
+USERNAME = ENV['USER']
+GH = ENV['GH']
+SSH_PUB_KEYS = ENV['SSH_PUB_KEYS']
+VM_BOX = ENV['VM_BOX']
+VB_NAME = ENV['VB_NAME']
+
+
+bootstrap = <<SCRIPT
+  useradd -d /home/#{USERNAME} -s /bin/bash -m #{USERNAME} --groups sudo
+  echo "%#{USERNAME} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/#{USERNAME}
+  mkdir -p /home/#{USERNAME}/.ssh
+  chown -R #{USERNAME}:#{USERNAME} /home/#{USERNAME}
+  echo "#{SSH_PUB_KEYS}" > /home/#{USERNAME}/.ssh/authorized_keys
+  # ssh-import-id-gh #{GH}
+  # sed -i "s@http:\/\/ar/http:\/\@ru.ar@g" /etc/apt/sources.list
+SCRIPT
+
 
 Vagrant.configure(2) do |config|
   config.vm.box = VM_BOX
-
   config.vm.provider "virtualbox" do |vb|
-    vb.name = 'docker'
-    vb.memory = 4096
-    vb.cpus = 2
+    vb.name = VB_NAME
+    vb.memory = 16384
+    vb.cpus = 8
+#    vb.customize [ "modifyvm", :id, "--uartmode1", "file", File::NULL ]
 #    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
 #    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
   end
 
   config.vm.provision :shell, path: "bootstrap-docker.sh"
-#  config.vm.provision :docker
+
+  config.vm.provision "shell" do |s|
+#    ssh_pub_key = File.readlines("#{Dir.home}/.ssh/id_rsa.pub").first.strip
+    s.inline = <<-SHELL
+      #echo #{ssh_pub_key} >> /home/vagrant/.ssh/authorized_keys
+      #echo #{ssh_pub_key} >> /root/.ssh/authorized_keys
+      ssh-import-id-gh #{GH}
+    SHELL
+  end
+
+  config.vm.provision "shell", inline: "#{bootstrap}", privileged: true
 
 end
