--- a/work/Vagrantfile
+++ b/work/Vagrantfile
@@ -29,7 +29,7 @@ Vagrant.configure(2) do |config|
     vb.customize ["modifyvm", :id, "--vrde", "off"]
   end
 
-  config.vm.post_up_message = "run \"vagrant up --provision-with users\" after fisrts up"
+  config.vm.post_up_message = "run \"vagrant up --provision-with users\" after fist up"
 
   config.vm.provision "users", type: "shell", path: "../scripts/users.sh",
     env: {"USERNAME" => USERNAME, "GH" => GH, "SSH_PUB_KEYS" => SSH_PUB_KEYS},
