--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -9,7 +9,7 @@
 
 Vagrant.configure(2) do |config|
   config.env.enable # enable plugin
-  
+
   USERNAME = ENV['USER']
   GH = ENV['GH']
   SSH_PUB_KEYS = ENV['SSH_PUB_KEYS']
@@ -27,22 +27,16 @@ Vagrant.configure(2) do |config|
     vb.customize ["modifyvm", :id, "--vrde", "off"]
   end
 
-  config.vm.provision :shell, path: "../scripts/bootstrap-docker.sh"
+  config.vm.provision "pkgs", type: "shell", path: "../scripts/pkgs.sh", before: "all", run: "once"
 
-bootstrap = <<SCRIPT
-    useradd -d /home/#{USERNAME} -s /bin/bash -m #{USERNAME} --groups sudo
-    echo "%#{USERNAME} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/#{USERNAME}
-    mkdir -p /home/#{USERNAME}/.ssh
-    chown -R #{USERNAME}:#{USERNAME} /home/#{USERNAME}
-    su #{USERNAME} -c 'echo "#{SSH_PUB_KEYS}" >> /home/#{USERNAME}/.ssh/authorized_keys'
-    su #{USERNAME} -c 'ssh-import-id-gh #{GH}'
-    mkdir /root/.ssh
-    cat /home/#{USERNAME}/.ssh/authorized_keys >> /root/.ssh/authorized_keys
-    chmod -R 700 /root/.ssh
-    cat /home/#{USERNAME}/.ssh/authorized_keys >> /home/vagrant/.ssh/authorized_keys
-    # sed -i "s@http:\/\/ar/http:\/\@ru.ar@g" /etc/apt/sources.list
-SCRIPT
+  config.vm.provision "users", type: "shell", path: "../scripts/users.sh",
+    env: {"USERNAME" => USERNAME, "GH" => GH, "SSH_PUB_KEYS" => SSH_PUB_KEYS},
+    privileged: true, run: "once", before: "all"
 
-  config.vm.provision "shell", inline: "#{bootstrap}", privileged: true
+  config.vm.provision "user-environment", type: "shell", path: "../scripts/environment.sh",
+    env: {"USERNAME" => USERNAME},
+    privileged: true, run: "once"
+
+  config.vm.provision "docker", type: "shell", path: "../scripts/bootstrap-docker.sh", env: {"USERNAME" => USERNAME}, run: "once"
 
 end
