--- a/work/Vagrantfile
+++ b/work/Vagrantfile
@@ -9,7 +9,7 @@
 
 Vagrant.configure(2) do |config|
   config.env.enable # enable plugin
-  
+
   USERNAME = ENV['USER']
   GH = ENV['GH']
   SSH_PUB_KEYS = ENV['SSH_PUB_KEYS']
@@ -29,18 +29,18 @@ Vagrant.configure(2) do |config|
     vb.customize ["modifyvm", :id, "--vrde", "off"]
   end
 
-  config.vm.post_up_message = "run \"vagrant up --provision-with users\" after fist up"
+  config.vm.post_up_message = "run the next commands once if you need it after fist up:\n\"vagrant up --provision-with users\"\n\"vagrant up --provision-with user-environment\""
+
+  config.vm.provision "pkgs", type: "shell", path: "../scripts/pkgs.sh", before: "all", run: "once"
 
   config.vm.provision "users", type: "shell", path: "../scripts/users.sh",
     env: {"USERNAME" => USERNAME, "GH" => GH, "SSH_PUB_KEYS" => SSH_PUB_KEYS},
     privileged: true, run: "never", before: "all"
 
-  config.vm.provision "pkgs", type: "shell", path: "../scripts/pkgs.sh", before: "all", run: "once"
-
   config.vm.provision "user-environment", type: "shell", path: "../scripts/environment.sh",
     env: {"USERNAME" => USERNAME},
     privileged: true, run: "never"
 
-  config.vm.provision "docker", type: "shell", path: "../scripts/bootstrap-docker.sh", run: "never"
+  config.vm.provision "docker", type: "shell", path: "../scripts/bootstrap-docker.sh", env: {"USERNAME" => USERNAME}, run: "never"
 
 end
