--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -17,6 +17,8 @@ Vagrant.configure(2) do |config|
   VM_NAME = ENV['VM_NAME']
 
   config.vm.box = VM_BOX
+  config.vm.hostname = VM_NAME
+
   config.vm.provider "virtualbox" do |vb|
     vb.name = VM_NAME
     vb.memory = 4096
