--- a/work/Vagrantfile
+++ b/work/Vagrantfile
@@ -17,8 +17,11 @@ Vagrant.configure(2) do |config|
   VM_NAME = ENV['VM_NAME']
 
   config.vm.box = VM_BOX
+  config.vm.hostname = VM_NAME
+
   config.vm.network "public_network", type: "dhcp", bridge: "Intel(R) Wireless-AC 9560 160MHz"
   config.vm.network "forwarded_port", guest: 8000, host: 15000, protocol: "tcp"
+
   config.vm.provider "virtualbox" do |vb|
     vb.name = VM_NAME
     vb.memory = 4096
