--- a/xx/Vagrantfile
+++ b/xx/Vagrantfile
@@ -19,14 +19,13 @@ Vagrant.configure(2) do |config|
   config.vm.box = VM_BOX
   config.vm.hostname = VM_NAME
 
-  config.vm.network "public_network", type: "dhcp", bridge: "Intel(R) Wireless-AC 9560 160MHz"
+  config.vm.network "public_network", type: "dhcp", bridge: "Intel(R) Wireless-AC 9560 160MHz", :mac => "0800270114ce"
   config.vm.network "forwarded_port", guest: 8000, host: 15000, protocol: "tcp"
 
   config.vm.provider "virtualbox" do |vb|
     vb.name = VM_NAME
     vb.memory = 4096
     vb.cpus = 2
-#    vb.customize [ "modifyvm", :id, "--uartmode1", "file", File::NULL ]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "off"]
     vb.customize ["modifyvm", :id, "--vrde", "off"]
@@ -40,10 +39,14 @@ Vagrant.configure(2) do |config|
     env: {"USERNAME" => USERNAME, "GH" => GH, "SSH_PUB_KEYS" => SSH_PUB_KEYS},
     privileged: true, run: "never", before: "all"
 
-  config.vm.provision "user-environment", type: "shell", path: "../scripts/environment.sh",
+  config.vm.provision "user-environment", type: "shell",
+    path: "../scripts/environment.sh",
     env: {"USERNAME" => USERNAME},
     privileged: true, run: "never"
 
-  config.vm.provision "docker", type: "shell", path: "../scripts/bootstrap-docker.sh", env: {"USERNAME" => USERNAME}, run: "never"
+  config.vm.provision "docker", type: "shell",
+    path: "../scripts/bootstrap-docker.sh",
+    env: {"USERNAME" => USERNAME},
+    run: "never"
 
 end
