--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -19,11 +19,13 @@ Vagrant.configure(2) do |config|
   config.vm.box = VM_BOX
   config.vm.hostname = VM_NAME
 
+  config.vm.network "forwarded_port", guest: 3000, host: 15000, protocol: "tcp"
+  config.vm.network "forwarded_port", guest: 80, host: 15001, protocol: "tcp"
+
   config.vm.provider "virtualbox" do |vb|
     vb.name = VM_NAME
     vb.memory = 4096
     vb.cpus = 2
-#    vb.customize [ "modifyvm", :id, "--uartmode1", "file", File::NULL ]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "off"]
     vb.customize ["modifyvm", :id, "--vrde", "off"]
