ssh port changed to static

--- a/xx/Vagrantfile
+++ b/xx/Vagrantfile
@@ -21,6 +21,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.network "public_network", type: "dhcp", bridge: "Intel(R) Wireless-AC 9560 160MHz", :mac => "0800270114ce"
   config.vm.network "forwarded_port", guest: 8000, host: 15000, protocol: "tcp"
+  config.vm.network "forwarded_port", guest: 22, host: 2233, id: 'ssh'
 
   config.vm.provider "virtualbox" do |vb|
     vb.name = VM_NAME
